# plinder

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CITATION.cff  DATA_POLICY.txt  LICENSE.txt  NOTICE  README.md  data.json  data_dictionary.md  docker-compose.yml  endpoint.json  environment.yml  manifest.md  mypy.ini  pyproject.toml  pytest.ini  requirements_data.txt  tox.ini
.github/workflows/: docs.yaml  main.yaml  pr.yaml
analysis/: Figure2_Paper.ipynb  Table_1.ipynb  Table_2.ipynb  artifacts_rev.ipynb  eval_test_task_subsets.ipynb  figureLeakage.ipynb  forjay_pdbind_comparison.ipynb  inspect_similarity_scores.ipynb  table_A13.ipynb
column_descriptions/: entry.tsv  entry_information.tsv  entry_validation.tsv  extra.tsv  ligand_chains.tsv  ligand_interacting_ligand_chains.tsv  ligand_interacting_ligand_chains_validation.tsv  ligand_neighboring_ligand_chains.tsv  ligand_neighboring_ligand_chains_validation.tsv  ligand_pocket_properties.tsv  ligand_properties.tsv  ligand_protein_chains.tsv  ligand_protein_chains_validation.tsv  ligands.tsv  posebusters_checks.tsv  protein_chains.tsv  qc.tsv  similarity_clusters.tsv  system.tsv  system_ligand_chains.tsv  system_ligand_chains_validation.tsv  system_ligand_validation.tsv  system_pocket_validation.tsv  system_properties.tsv  system_protein_chains.tsv  system_protein_chains_validation.tsv
dockerfiles/base/: Dockerfile  env.yml  requirements.txt
dockerfiles/main/: Dockerfile
dockerfiles/test/: Dockerfile
docs/: api.md  apidoc.py  build.sh  citation.md  conf.py  dataset.md  eval.md  evaluation.md  index.md  process.md  tablegen.py  viewcode.py
docs/api/: index.md
docs/contribution/: development.md  documentation.md  index.md  pipeline.md  release.md
docs/data/: process.md
docs/examples/: 1_download.ipynb  2_query_filter_index.ipynb  3_access_system_files.ipynb  4_align_mask_crop.ipynb  5_dataset_and_loader.ipynb  6_custom_split.ipynb  6_custom_split.md  data-access-v2.ipynb  data-access.ipynb  data_access.ipynb  example.ipynb  example2.ipynb  index.md  loader_examples.ipynb  mlsb-data-access.ipynb  mlsb_challenge.md  mlsb_data_access.ipynb  test.ipynb  wip_mapping_Posebusters_systems.ipynb
docs/source/: conf.py  examples.rst  index.rst  readme.md
docs/static/: plinder.css
docs/tutorial/: api.ipynb  api.md  dataset.ipynb  dataset.md  index.md
examples/: 01-getting-started.ipynb  02-dataset-quick-guide.ipynb  03-querying-similarity-dataset.ipynb  deleak_posebusters.ipynb  getting-started.ipynb
examples/data/: posebusters_benchmark_set_ids.txt
flows/: data_ingest.py  data_ingest_report.py  docker.py  proc.py  report.py  split_eval.py
flows/configs/v2/: download_and_make_dbs.yaml  make_batch_scores_only.yaml  make_components.yaml  make_entries_ligands.yaml  make_leakage.yaml  make_protein_scores.yaml  make_splits.yaml  split_multi_graph.yaml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0bb44ca9094e3988_atoms_py.html  z_0bb44ca9094e3988_contacts_py.html  z_0bb44ca9094e3988_models_py.html  z_0c7538e4f2b762b3_config_py.html  z_0c7538e4f2b762b3_constants_py.html  z_0c7538e4f2b762b3_cpl_py.html  z_0c7538e4f2b762b3_dataclass_py.html  z_0c7538e4f2b762b3_dec_py.html  z_0c7538e4f2b762b3_gcs_py.html  z_0c7538e4f2b762b3_io_py.html  z_0c7538e4f2b762b3_load_systems_py.html  z_0c7538e4f2b762b3_log_py.html  z_0c7538e4f2b762b3_schemas_py.html  z_0c7538e4f2b762b3_unpack_py.html  z_0f74be8b502041a7___init___py.html  z_0f74be8b502041a7__version_py.html  z_13d1ac8284c2be4c_aggregate_annotations_py.html  z_13d1ac8284c2be4c_get_ligand_validation_py.html  z_13d1ac8284c2be4c_get_similarity_scores_py.html  z_13d1ac8284c2be4c_interaction_utils_py.html  z_13d1ac8284c2be4c_interface_gap_py.html  z_13d1ac8284c2be4c_ligand_utils_py.html  z_13d1ac8284c2be4c_mmpdb_utils_py.html  z_13d1ac8284c2be4c_protein_utils_py.html  z_13d1ac8284c2be4c_rdkit_utils_py.html  z_13d1ac8284c2be4c_save_utils_py.html  z_13d1ac8284c2be4c_utils_py.html  z_2299331d2ee67556_atoms_py.html  z_2299331d2ee67556_contacts_py.html  z_2299331d2ee67556_diffdock_utils_py.html  z_2299331d2ee67556_models_py.html  z_2299331d2ee67556_smallmols_similarity_py.html  z_2299331d2ee67556_smallmols_utils_py.html  z_2299331d2ee67556_structure_py.html  z_2299331d2ee67556_superimpose_py.html  z_2299331d2ee67556_surgery_py.html  (+121 more)
notebooks/: plinder.ipynb
scripts/: download_plinder.py  make_docs_public.sh  make_nfs_public.sh  make_source_public.sh  make_v1_public.sh  write_data_dicionary.py
src/plinder/: __init__.py  _version.py
src/plinder-data/: README.md  manifest.md
src/plinder-data/column_descriptions/: entry_quality.tsv  ligand_pocket_quality.tsv  qc.tsv  system_ligands_properties.tsv  system_ligands_quality.tsv  system_pocket_properties.tsv  system_pocket_quality.tsv
src/plinder/core/: __init__.py
src/plinder/data/: README.md  __init__.py  clusters.py  compare_split_props.py  databases.py  docs.py  final_structure_qc.py  get_system_annotations.py  leakage.py  save_linked_structures.py  smallmolecules.py  splits.py
src/plinder/eval/: __init__.py
tests/: conftest.py  test_annotations.py  test_atoms.py  test_eval.py  test_extras.py  test_final_structure_checks.py  test_rdkit_utils.py  test_smallmolecules.py
tests/core/: test_atoms.py  test_core_config.py  test_core_scores.py  test_core_system.py  test_data_loader.py  test_dataclass.py  test_gcs.py  test_index_utils.py  test_plinder_core.py  test_smallmols_utils.py  test_split_plot.py  test_superimpose.py  test_transforms.py
tests/data/: test_clusters.py  test_docs.py  test_plinder_data.py  test_save_linked_structures.py
tests/data/pipeline/: test_config.py  test_end_to_end.py  test_io.py  test_pipeline.py  test_tasks.py  test_transform.py  test_utils.py
tests/test_data/: components.cif  components.parquet  ecod_mini.tsv  kinase_ligand_ccd_codes.parquet  kinase_uniprotac.parquet  mini_all_entries.json  mini_score_dataset.parquet  mini_score_seq_dataset.parquet  mini_structure_checks_report.tsv  smiles_from_nextgen_bonds_data.csv  test_kinase_klifs.csv
(+284 files in other folders)
